--- a/content/featurettes/scratch-for-executives.yaml
+++ b/content/featurettes/scratch-for-executives.yaml
@@ -1,6 +1,6 @@
 image: ../assets/
 title: Scratch for Executives
-description: 'Software developers are required to think business, but can Executives think code? In between one and three fun sessions, Scratch for Executives will help you open your mind and find the Holy Graal of collaboration: empathy.'
+description: 'Software developers are required to think business, do Business Executives think code? Scratch for Executives introduces Business Executives to the challenges facing software developers. T. E. Shaw has been writing code since age of 8, which is 40 years ago; his superpower is his ability to explain business to code and code to business.'
 sections:
 - description:
     - >
