--- a/content/featurettes.yaml
+++ b/content/featurettes.yaml
@@ -15,4 +15,4 @@ features:
   description: "Software developers are required to think business, do Business Executives think code?"
   image: assets/maxresdefault.png
   template: featurettes 
-  link: scratch-for-business-executives
+  link: scratch-for-executives
