--- a/content/featurettes/scratch-for-executives.yaml
+++ b/content/featurettes/scratch-for-executives.yaml
@@ -1,6 +1,6 @@
 image: ../assets/
 title: Scratch for Executives
-description: 'Software developers are required to think business, do Business Executives think code? Scratch for Executives introduces Business Executives to the challenges facing software developers. T. E. Shaw has been writing code since age of 8, which is 40 years ago; his superpower is his ability to explain business to code and code to business.'
+description: 'Software developers are required to think business, do Business Executives think code? Scratch for Executives introduces Business Executives to the challenges facing software developers.'
 sections:
 - description:
     - >
