--- a/content/featurettes/scratch-for-executives.yaml
+++ b/content/featurettes/scratch-for-executives.yaml
@@ -4,7 +4,7 @@ description: 'Software developers are required to think business, do Business Ex
 sections:
 - description:
     - >
-       If you are a manager in a digital project, you have to do w/ developers: directly or indirectly. The nature of digital products: SOFTware, presents a specific challenge: intrinsic discipline and intrinsic respect for structure.
+       Business Executives face the challenges of the digital transformation. These challenges are sometimes amplified by the chasm between business and software.
     - >
        This means, that w/o structure and discipline, a digital product is v easy to violate, which can break the quality: fitness for purpose, competitiveness and robustness.
   image: ../assets/
