--- a/content/featurettes/scratch-for-executives.yaml
+++ b/content/featurettes/scratch-for-executives.yaml
@@ -4,9 +4,9 @@ description: 'Software developers are required to think business, do Business Ex
 sections:
 - description:
     - >
-       Business Executives face the challenges of the digital transformation. These challenges are sometimes amplified by the chasm between business and software.
+       Business Executives face the challenges of the digital transformation. These challenges are sometimes amplified by the distance between business and software.
     - >
-       This means, that w/o structure and discipline, a digital product is v easy to violate, which can break the quality: fitness for purpose, competitiveness and robustness.
+       Scratch for Executives brings Business Executives closer to software, helping them to understand it. Because only what one understands can one manage.
   image: ../assets/
 - description:
     - >
