--- a/content/featurettes/scratch-for-executives.yaml
+++ b/content/featurettes/scratch-for-executives.yaml
@@ -7,10 +7,10 @@ sections:
        Business Executives face the challenges of the digital transformation. These challenges are sometimes amplified by the presence of software.
     - >
        Scratch for Executives helps Business Executives feel comfortable around software.
-  image: ../assets/
+  image: ../assets/scratch_title.png
 - description:
     - >
        Scratch for Executives help you, in a playful, but seriously educational way still, to understand the challenges and the mindset of the software developers.
     - >
        This way you can become more empathic and eventually better in your job, which will allow you to keep your job, earn the respect of your colleagues and eventually: earn a promotion (if that's what you truly desire).
-  image: ../assets/
+  image: ../assets/scratch_title.png
