--- a/content/featurettes/scratch-for-executives.yaml
+++ b/content/featurettes/scratch-for-executives.yaml
@@ -10,7 +10,7 @@ sections:
   image: ../assets/scratch_title.png
 - description:
     - >
-       Scratch for Executives help you, in a playful, but seriously educational way still, to understand the challenges and the mindset of the software developers.
+       Several easy sessions (the 1st one for free) will put you at ease and will allow you to reflect on your challenges.
     - >
-       This way you can become more empathic and eventually better in your job, which will allow you to keep your job, earn the respect of your colleagues and eventually: earn a promotion (if that's what you truly desire).
+       An experienced tutor will help you sort your thoughts, identify your challenges and plan solutions.
   image: ../assets/scratch_title.png
