--- a/content/featurettes/scratch-for-executives.yaml
+++ b/content/featurettes/scratch-for-executives.yaml
@@ -1,6 +1,6 @@
 image: ../assets/scratch_title.png
 title: Scratch for Executives
-description: 'Software developers are required to think business, but do Business Executives think code? Scratch for Executives introduces Business Executives to the world of the software developers.'
+description: 'Software developers are required to think business, but do Business Executives think code? Scratch for Executives introduces Business Executives to the world of software development.'
 sections:
 - description:
     - >
