--- a/content/featurettes/scratch-for-executives.yaml
+++ b/content/featurettes/scratch-for-executives.yaml
@@ -4,9 +4,9 @@ description: 'Software developers are required to think business, but do Busines
 sections:
 - description:
     - >
-       Business Executives face the challenges of the digital transformation. These challenges are sometimes amplified by the presence of software.
+       Digital transformation is one of the biggest challenges facing Business Executives. The communication between the Business Executives and the Software Developers is a major part of it.
     - >
-       Scratch for Executives helps Business Executives feel comfortable around software.
+       Scratch for Executives helps Business Executives tackle this challenge.
   image: ../assets/scratch_title.png
 - description:
     - >
