fixed footer and featurettes

--- a/content/footer.yaml
+++ b/content/footer.yaml
@@ -1,3 +1,4 @@
+logo: /assets/logo_white.svg
 location: /assets/location-point.svg
 address: 241 Hertingfordbury Road, Hertingfordbury, SG14 2LB
 contactsImage: /assets/contacts.svg
