--- a/content/featurettes/scratch-for-executives.yaml
+++ b/content/featurettes/scratch-for-executives.yaml
@@ -1,4 +1,4 @@
-image: ../assets/scratch_title.png
+image: ../assets/scratch_for_executives_header.png
 title: Scratch for Executives
 description: 'Software developers are required to think business, but do Business Executives think code? Scratch for Executives introduces Business Executives to the world of software development.'
 sections:
