--- a/content/featurettes/featurette.yaml
+++ b/content/featurettes/featurette.yaml
@@ -1,3 +1,4 @@
+# This is a full example of the featurette template containing examples of all possible content.
 # TODO
 # Hardcode the prefexi (also everywhere below)
 image: design_image.png
