Separators for home page

--- a/content/testimonials.yaml
+++ b/content/testimonials.yaml
@@ -1,3 +1,4 @@
+separator: testimonials
 header: What people say about us
 bigQuote: /assets/red-big-quote.svg
 smallQuote: /assets/red-small-quote.svg
