--- a/content/what-we-do.yaml
+++ b/content/what-we-do.yaml
@@ -1,3 +1,4 @@
+separator: what we do
 sections:
 - header: Digital Transformation
   description: Digytle helps you harness and adopt the best technologies to transform your businesse's processes and services. To digitally transform means a paradigm shift, organisational change and market re-positioning. Digytle can help you achieve all three.
