--- a/content/featurettes/sbf.yaml
+++ b/content/featurettes/sbf.yaml
@@ -1,6 +1,6 @@
 image: design_image.png
 title: Stichting Bedrijfsfinanciering
-description: Stichting Bedrijfsfinanciering is a Dutch non-profit foundation which develops a digital solution to help business find financing.uyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
+description: Stichting Bedrijfsfinanciering is a Dutch non-profit foundation which develops a digital solution to help business find financing.
 sections:
 - type: introduction
   title: Businesses and Financing
