--- a/content/work.yaml
+++ b/content/work.yaml
@@ -1,6 +1,6 @@
 separator: Latest Work
 title: Latest Work
-description: Here are some of our latest victories.
+description: Digytle is working on a number of projects. Here are several of the current: a chat bot management platform, a not-for-profit foundation digitally helping businesses find financing and a platform automating quality.
 work:
 - title: Blits ChatBots
   image: assets/blits.png
