--- a/content/work.yaml
+++ b/content/work.yaml
@@ -1,6 +1,6 @@
 separator: Latest Work
 title: Latest Work
-description: 'Digytle is working on a number of projects. Here are several of the current: a chat bot management platform, a not-for-profit foundation digitally helping businesses find financing and a platform automating quality.'
+description: 'Digytle is working on a number of projects. Here are several of the current: a chat bot management platform, a not-for-profit foundation digitally helping businesses find financing and a platform automating quality. Digytally works in virtually all aspects of digital products, transformation and design. If you are looking for a specific type of service, contact us and we will provide you with relevant references.'
 work:
 - title: Blits ChatBots
   image: assets/blits.png
